[package]
name = "aztunnel"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "forward"
path = "src/bin/forward.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
anyhow = "1.0.70"
uuid = { version = "1.3.0", features = ["serde"] }
tokio-util = { version = "0.7.7", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
futures-util = { version = "0.3.28", features = ["sink"] }
serde_json = "1.0.95"
tracing = "0.1.37"
dashmap = "5.4.0"
